增加两个文档

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
 test/report
+/Diagram.pptx
+/Plan.xlsx
