--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Wanglei",
-            "email": "flaboy@shopex.cn",
+            "name": "Cai yun chen",
+            "email": "caiyunchen@shopex.cn",
             "homepage": "http://www.shopex.cn/"
         }
     ],
