--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Cai yun chen",
+            "name": "Cai Yun Chen",
             "email": "caiyunchen@shopex.cn",
             "homepage": "http://www.shopex.cn/"
         }
